--- a/CvSite.Web/CvSite.Web.csproj
+++ b/CvSite.Web/CvSite.Web.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CvSite.Data\CvSite.Data.csproj" />
+  </ItemGroup>
+
 </Project>
